image source link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 </div>
             </div>
         </nav>
+
+        <img src="/static/cover_photo.jpg" class="img-fluid" alt="...">
         
 
         <div class="container">
