--- a/index.html
+++ b/index.html
@@ -13,37 +13,56 @@
     <body>
 
         <nav class="navbar navbar-light bg-dark">
-            <h1 class="brandtitle">JAY RAJAN </h1>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#"><h1 class=brandtitle>Home</h1><span class="sr-only">(current)</span></a>
-                  </li>
-                </ul>
-            </div>
+            <span class="brandtitle">JAY RAJAN</span>
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" href="#Home"><h1 class=nav>Home</h1><span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="#About"><h1 class=nav>About Me</h1><span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Contact"><h1 class=nav>Contact</h1><span class="sr-only">(current)</span></a>
+                </li>
+
+            </ul>
         </nav>
-        
-
-
+        <a name='Home'></a>
+        <br>
         <img src="static/cover_photo.jpg" class="img-fluid" alt="cover_photo">
         
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <blockquote class="blockquote text-center">
-                    <p class="mb-0"><h1 class="diaplay-4"></h1></p>
-                </blockquote>
-            </div>
-        </div>
 
-        <h3> This is a sample photo </h3>
         <br>
-        <img src="/static/logo.jpg" alt="logo" width="30" height="24">
+
 
         <div class="container">
-            <div class="jumbotron">
-                <h1 class="display-4">This is Jay Rajan</h1>
+            <div class="jumbotron jumbotron jumbotron-fluid">
+                <a name='About'></a>
+                <h1 class="display-5">This is Jay Rajan</h1>
                 <br>
-                <p class="lead"> Showcasing some of my talents 
+                <p class="lead"> Welcome to my website.
+                <p>Showcasing some of my Portfolio Shoots</p>    
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100" src="static/shoot2.jpg" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="static/shoot1.jpg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="static/shoot3.jpg" alt="Third slide">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
 
 
             </div>
@@ -52,13 +71,12 @@
 
 
 
+
+        <a name='Contact'></a>
         <nav class="navbar navbar-light bg-dark">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-8"><p class=brandtitle>JAY RAJAN</p></div>
-                    <div class="col-sm-4"><p class=footerfont>Keep In Touch</p></div>
-                </div>
-                <div class="row">
+                    <div class="col-sm-8"><p class=brandtitle>Contact</p></div>
                     <div class="col-sm-4"><p class=footerfont>Keep In Touch</p></div>
                 </div>
 
