fix: font size in about section

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <span class="brandtitle">JAY RAJAN</span>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link" href="#Home"><h1 class=nav>Home</h1><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#Home"><h1 class=nav>HOME</h1><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#About"><h1 class=nav>About Me</h1><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#About"><h1 class=nav>ABOUT ME</h1><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Contact"><h1 class=nav>Contact</h1><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#Contact"><h1 class=nav>CONTACT</h1><span class="sr-only">(current)</span></a>
                 </li>
 
             </ul>
@@ -38,10 +38,10 @@
         <div class="container">
             <div class="jumbotron jumbotron jumbotron-fluid">
                 <a name='About'></a>
-                <h1 class="display-5">This is Jay Rajan</h1>
+                <h1 class="display-3 text-center">This is Jay Rajan</h1>
                 <br>
-                <p class="lead"> Welcome to my website.
-                <p>Showcasing some of my Portfolio Shoots</p>    
+                <p class="about"> Welcome to my website.
+                <p class="about">Showcasing some of my Portfolio Shoots</p>    
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -76,9 +76,17 @@
         <nav class="navbar navbar-light bg-dark">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-8"><p class=brandtitle>Contact</p></div>
-                    <div class="col-sm-4"><p class=footerfont>Keep In Touch</p></div>
+                    <div class="col-sm-4"><p class=brandtitle>Contact</p>
+                        <ul>
+                            <li>item1</li>
+                            <l1>item2</l1>
+                        </ul>
+                    </div>
                 </div>
+                <div class="row">
+                    <div><p class=footerfont>Back to Top</p></div>
+                </div>
+
 
             </div>
 
