feat: added back-to-top link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <!-- SECTION: ABOUT -->
 
         <div class="container">
+            <div><p class=footerfont><a href="#Home">Back to Top</a></p></div>
             <div class="jumbotron jumbotron-fluid">
                 <a name='About'></a>
                 <h1 class="display-3 text-center">This is Jay Rajan</h1>
