--- a/index.html
+++ b/index.html
@@ -49,28 +49,56 @@
                 <h1 class="display-3 text-center">This is Jay Rajan</h1>
                 <br>
                 <p class="about"> Welcome to my website.
-                <p class="about">Showcasing some of my Portfolio Shoots</p>    
+                <p class="about">Showcasing some of my Portfolio Shoots</p> 
+                
+                <div class="container">
+                    <hr>
+                </div>
+
+                <div class="container">
+                    <div class="row">
+                      <div class="col-sm">
+                          <img class="w-50" src="static/shoot2.jpg" alt="first shot">
+                      </div>
+                      <div class="col-sm">
+                        <img class="w-50" src="static/shoot1.jpg" alt="Second shot">
+                      </div>
+                      <div class="col-sm">
+                        <img class="mx-auto w-50" src="static/shoot3.jpg" alt="Third shot">
+                      </div>
+                    </div>
+                  </div>
+
+                  <br>
+
+
+
+
+
+
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img class="d-block w-100" src="static/shoot2.jpg" alt="First slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="static/shoot1.jpg" alt="Second slide">
-                          </div>
-                          <div class="carousel-item">
-                            <img class="d-block w-100" src="static/shoot3.jpg" alt="Third slide">
-                          </div>
+                            <div class="carousel-item active">
+                            <img class="mx-auto w-50" src="static/shoot2.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                            <img class="imx-auto w-50" src="static/shoot1.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                            <img class="mx-auto w-50" src="static/shoot3.jpg" alt="Third slide">
+                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Previous</span>
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
                         </a>
                         <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Next</span>
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
                         </a>
-                      </div>
+                    </div>
+
+                    
             </div>
         </div>
 
