--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en" dir="ltr">
     <head>
-        <title>Home Page</title>
+        <title>JR Home Page</title>
         <!-- Bootstrap CSS, JS, and jQuery -->
         <!-- STEP 1: INSERT THE BOOTSTRAP 4 LINKS HERE -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
