--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                     <div class="row">
                         <div class="col-sm">
-                            <span class="address"> ©️2021. JTech. All Rights Reserved </span>
+                            <span class="address"> 2021. JTech. All Rights Reserved </span>
                         </div>
                     </div>
 
