feat: meta tag added in head

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
+        <meta charset="utf-8">
         <title>JR Home Page</title>
         <!-- Bootstrap CSS, JS, and jQuery -->
         <!-- STEP 1: INSERT THE BOOTSTRAP 4 LINKS HERE -->
