--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
         <a name='Home'></a>
 
         <nav class="navbar navbar-light bg-dark">
-            <a class="navbar-brand" href="#Home"><span class=brandtitle>JR</span></a>
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link" href="#Home"><h1 class=nav>HOME</h1><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="#About"><h1 class=nav>ABOUT ME</h1><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Contact"><h1 class=nav>CONTACT</h1><span class="sr-only">(current)</span></a>
-                </li>
+            <div class="container-fluid">
+                <!--<a class="navbar-brand" href="#Home"><span class=brandtitle>JR</span></a> -->
+                <a class="navbar-brand" href="#">
+                    <img src="static/logo.svg" alt="" width="80" height="80" class="d-inline-block align-top"></a>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Home"><h1 class=nav>HOME</h1><span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="#About"><h1 class=nav>ABOUT ME</h1><span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Contact"><h1 class=nav>CONTACT</h1><span class="sr-only">(current)</span></a>
+                    </li>
+    
+                </ul>
 
-            </ul>
+            </div>
+
         </nav>
 
         
