--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <!-- SECTION: NAV BAR -->
         <a name='Home'></a>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light bg-dark">
             <div class="container-fluid">
                 <!--<a class="navbar-brand" href="#Home"><span class=brandtitle>JR</span></a> -->
                 <a class="navbar-brand" href="#"><img src="static/logo.svg" alt="" width="80" height="80" class="d-inline-block align-top"></a>
